force-app/main/default/objects/MasterAnken__c/MasterAnken__c.object-meta.xml
<CustomObject>
    <customHelpPage>page_MBLOnlineHelp</customHelpPage>
    <description>M B/L - SHIPMENTS</description>
    <label>混載</label>
    <nameField>
        <label>MASTER SHIPMENT NAME</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>