force-app/main/default/objects/MasterAnken__c/fields/ApplicationNO__c.field-meta.xml
<CustomField>
    <fullName>ApplicationNO__c</fullName>
    <label>Application NO</label>
    <length>100</length>
    <type>Text</type>
</CustomField>