force-app/main/default/objects/MasterAnken__c/fields/Autorollupcargoquantity__c.field-meta.xml
<CustomField>
    <fullName>Autorollupcargoquantity__c</fullName>
    <label>Auto-Rollup Cargo Quantity</label>
    <summarizedField>ConsolCNTR__c.CargoQuantity__c</summarizedField>
    <summaryForeignKey>ConsolCNTR__c.Consolidation__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>