force-app/main/default/objects/MasterAnken__c/fields/autorollupgw__c.field-meta.xml
<CustomField>
    <fullName>autorollupgw__c</fullName>
    <label>Auto-Rollup G.W</label>
    <summarizedField>ConsolCNTR__c.GrossWeightKg__c</summarizedField>
    <summaryForeignKey>ConsolCNTR__c.Consolidation__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>