force-app/main/default/objects/MasterAnken__c/fields/bondedtimetoCFS__c.field-meta.xml
<CustomField>
    <fullName>bondedtimetoCFS__c</fullName>
    <inlineHelpText>Put the date when cargo manifest to customs is done</inlineHelpText>
    <label>LCL MANIFEST SUBMISSION TIME</label>
    <type>DateTime</type>
</CustomField>