force-app/main/default/objects/MasterAnken__c/fields/Buying__c.field-meta.xml
<CustomField>
    <fullName>Buying__c</fullName>
    <defaultValue>0</defaultValue>
    <label>EXCHANGE RATE(BUYING)-PARTNER</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>