force-app/main/default/objects/MasterAnken__c/fields/CarrierType__c.field-meta.xml
<CustomField>
    <fullName>CarrierType__c</fullName>
    <label>TRANSPORT TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>海上(SEA)</fullName>
            </value>
            <value>
                <fullName>航空(AIR)</fullName>
            </value>
            <value>
                <fullName>複合(SEA&amp;AIR)</fullName>
            </value>
            <value>
                <fullName>複合(SEA&amp;RAIL)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>