force-app/main/default/objects/MasterAnken__c/fields/CFS_Devan_PreRequest__c.field-meta.xml
<CustomField>
    <fullName>CFS_Devan_PreRequest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PRE-ALERT TO CFS WAREHOUSE</label>
    <type>Checkbox</type>
</CustomField>