force-app/main/default/objects/MasterAnken__c/fields/CHINA_KOREA_LOCALCHARGECONFIRMATION__c.field-meta.xml
<CustomField>
    <fullName>CHINA_KOREA_LOCALCHARGECONFIRMATION__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OVERSEA LOCAL CHARGE CONFIRMED</label>
    <type>Checkbox</type>
</CustomField>