force-app/main/default/objects/MasterAnken__c/fields/ConsolidationStatus__c.field-meta.xml
<CustomField>
    <fullName>ConsolidationStatus__c</fullName>
    <label>Consolidation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plan Consolidation Service</fullName>
            </value>
            <value>
                <fullName>Booked a Container</fullName>
            </value>
            <value>
                <fullName>Unload from Truck/Pickup from Shipper</fullName>
            </value>
            <value>
                <fullName>Created F/TMS S/O and Connect to Consolidation</fullName>
            </value>
            <value>
                <fullName>Copy from Consolidation to F/TMS S/O</fullName>
            </value>
            <value>
                <fullName>Loaded  Cargo to Container</fullName>
            </value>
            <value>
                <fullName>Issued Container Load Plan</fullName>
            </value>
            <value>
                <fullName>Transport Container to Yard</fullName>
            </value>
            <value>
                <fullName>Application for Customs Clearance-Outbound</fullName>
            </value>
            <value>
                <fullName>Customs Examination-Outbound</fullName>
            </value>
            <value>
                <fullName>Customs Inspection-Outbound</fullName>
            </value>
            <value>
                <fullName>Export Permitted</fullName>
            </value>
            <value>
                <fullName>B/L Issued</fullName>
            </value>
            <value>
                <fullName>Departured at Origin Port</fullName>
            </value>
            <value>
                <fullName>On Voyage</fullName>
            </value>
            <value>
                <fullName>Delayed</fullName>
            </value>
            <value>
                <fullName>Buying Amount Confirmed</fullName>
            </value>
            <value>
                <fullName>Create Consolidation Buying Record</fullName>
            </value>
            <value>
                <fullName>Create F/TMS Billing Records</fullName>
            </value>
            <value>
                <fullName>Cost Allocation from Consolidation Buying to F/TMS Buying</fullName>
            </value>
            <value>
                <fullName>Arrived at Destination Port</fullName>
            </value>
            <value>
                <fullName>Application for Customs Clearance-Inbound</fullName>
            </value>
            <value>
                <fullName>Customs Examination-Inbound</fullName>
            </value>
            <value>
                <fullName>Customs Inspection-Inbound</fullName>
            </value>
            <value>
                <fullName>Import Permitted</fullName>
            </value>
            <value>
                <fullName>Transport Container to Warehouse</fullName>
            </value>
            <value>
                <fullName>Unload from Container</fullName>
            </value>
            <value>
                <fullName>A/N Issued</fullName>
            </value>
            <value>
                <fullName>Collected Charges</fullName>
            </value>
            <value>
                <fullName>Payment Settled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>