force-app/main/default/objects/MasterAnken__c/fields/CreatFMSBill1__c.field-meta.xml
<CustomField>
    <fullName>CreatFMSBill1__c</fullName>
    <label>Create FMS Bill-1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RECEIVABLE_PAYABLE_ROLLUP_STATUS</valueSetName>
    </valueSet>
</CustomField>