force-app/main/default/objects/MasterAnken__c/fields/CYBONDEDTIME__c.field-meta.xml
<CustomField>
    <fullName>CYBONDEDTIME__c</fullName>
    <label>C/Y CONTAINER BONDED TIME</label>
    <type>DateTime</type>
</CustomField>