force-app/main/default/objects/MasterAnken__c/fields/DEBIT_EDIT_FEEDBACK__c.field-meta.xml
<CustomField>
    <fullName>DEBIT_EDIT_FEEDBACK__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DEBIT REVISION REQUESTED</label>
    <type>Checkbox</type>
</CustomField>