force-app/main/default/objects/MasterAnken__c/fields/DEBIT_FINAL__c.field-meta.xml
<CustomField>
    <fullName>DEBIT_FINAL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DEBIT CONFIRMED</label>
    <type>Checkbox</type>
</CustomField>