force-app/main/default/objects/MasterAnken__c/fields/Document_Receipt_Time__c.field-meta.xml
<CustomField>
    <fullName>Document_Receipt_Time__c</fullName>
    <label>Document Receipt Time</label>
    <type>DateTime</type>
</CustomField>