force-app/main/default/objects/MasterAnken__c/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CUSTOMER</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>MasterAnkenTorihikisaki</relationshipName>
    <type>Lookup</type>
</CustomField>