force-app/main/default/objects/MasterAnken__c/fields/Final_Destination__c.field-meta.xml
<CustomField>
    <fullName>Final_Destination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Final Destination</label>
    <referenceTo>Port__c</referenceTo>
    <relationshipLabel>CONSOL (Final Destination)</relationshipLabel>
    <relationshipName>CONSOL</relationshipName>
    <type>Lookup</type>
</CustomField>