force-app/main/default/objects/MasterAnken__c/fields/First_Approval_Time__c.field-meta.xml
<CustomField>
    <fullName>First_Approval_Time__c</fullName>
    <label>First Approval Time</label>
    <type>DateTime</type>
</CustomField>