force-app/main/default/objects/MasterAnken__c/fields/FMSSO1__c.field-meta.xml
<CustomField>
    <fullName>FMSSO1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FMS S/O-1</label>
    <referenceTo>CustomObject1__c</referenceTo>
    <relationshipLabel>CONSOL-F/TMS1</relationshipLabel>
    <relationshipName>CONSOLFTMSSO1</relationshipName>
    <type>Lookup</type>
</CustomField>