force-app/main/default/objects/MasterAnken__c/fields/FMSSO2__c.field-meta.xml
<CustomField>
    <fullName>FMSSO2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FMS S/O-2</label>
    <referenceTo>CustomObject1__c</referenceTo>
    <relationshipLabel>CONSOL (FMS S/O 2)</relationshipLabel>
    <relationshipName>ConsolFMSSO2</relationshipName>
    <type>Lookup</type>
</CustomField>