force-app/main/default/objects/MasterAnken__c/fields/FMSSO3__c.field-meta.xml
<CustomField>
    <fullName>FMSSO3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FMS S/O-3</label>
    <referenceTo>CustomObject1__c</referenceTo>
    <relationshipLabel>CONSOL (FMS S/O-3)</relationshipLabel>
    <relationshipName>ConsolFMSSO3</relationshipName>
    <type>Lookup</type>
</CustomField>