force-app/main/default/objects/MasterAnken__c/fields/Internal_Memo__c.field-meta.xml
<CustomField>
    <fullName>Internal_Memo__c</fullName>
    <label>INTERNAL MEMO</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>