force-app/main/default/objects/MasterAnken__c/fields/KOREA_EXCHANGERATE__c.field-meta.xml
<CustomField>
    <fullName>KOREA_EXCHANGERATE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EXCHANGE RATE CONFIRMED</label>
    <type>Checkbox</type>
</CustomField>