force-app/main/default/objects/MasterAnken__c/fields/Line__c.field-meta.xml
<CustomField>
    <fullName>Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Line Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Line</relationshipName>
    <type>Lookup</type>
</CustomField>