force-app/main/default/objects/MasterAnken__c/fields/Mailmerge_company_lo__c.field-meta.xml
<CustomField>
    <fullName>Mailmerge_company_lo__c</fullName>
    <formula>$Setup.Site_Custom_Settings__c.Logo_URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailmerge company lo</label>
    <type>Text</type>
</CustomField>