force-app/main/default/objects/MasterAnken__c/fields/MASTER_BOOKING_NO__c.field-meta.xml
<CustomField>
    <fullName>MASTER_BOOKING_NO__c</fullName>
    <label>MASTER BOOKING NO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>