force-app/main/default/objects/MasterAnken__c/fields/MASTER_COST_CONFIRMATION__c.field-meta.xml
<CustomField>
    <fullName>MASTER_COST_CONFIRMATION__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MASTER A/N RECEIVED</label>
    <type>Checkbox</type>
</CustomField>