force-app/main/default/objects/MasterAnken__c/fields/Master_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Master_Record_Type__c</fullName>
    <label>Master Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ocean Import</fullName>
            </value>
            <value>
                <fullName>Ocean Export</fullName>
                <default>true</default>
                <label>Ocean Export</label>
            </value>
            <value>
                <fullName>Air Import</fullName>
            </value>
            <value>
                <fullName>Air Export</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>