force-app/main/default/objects/MasterAnken__c/fields/Master_type__c.field-meta.xml
<CustomField>
    <fullName>Master_type__c</fullName>
    <label>MASTER TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>自社混載(Consolidation Cargo)</fullName>
                <default>true</default>
                <label>自社混載(Consolidation Cargo)</label>
            </value>
            <value>
                <fullName>1マスター複数ハウス(1Master Multiple House)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>