force-app/main/default/objects/MasterAnken__c/fields/MASTERALLOCATION__c.field-meta.xml
<CustomField>
    <fullName>MASTERALLOCATION__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>To complete Master Allocation, the following 3 cost need to be confirmed and allocated properly. AN from Carrier, Invoice from Warehouse, Debit from partner</inlineHelpText>
    <label>MASTER BUYING ALLOCATION TO HOUSE</label>
    <type>Checkbox</type>
</CustomField>