force-app/main/default/objects/MasterAnken__c/fields/MasterID__c.field-meta.xml
<CustomField>
    <fullName>MasterID__c</fullName>
    <displayFormat>M-{000000}</displayFormat>
    <label>M B/L(CONSOL) ID</label>
    <type>AutoNumber</type>
</CustomField>