force-app/main/default/objects/MasterAnken__c/fields/MBookingNv__c.field-meta.xml
<CustomField>
    <fullName>MBookingNv__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>当社を選択してください。</description>
    <inlineHelpText>Your company&apos;s consolidation;put your company name, Put the carrier name or consolidator(Co-loader) in other shipments</inlineHelpText>
    <label>MASTER CONSOLIDATOR/CARRIER</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CONSOLIDATION (MASTER CONSOLIDATOR/CARRIER)</relationshipLabel>
    <relationshipName>M_BL</relationshipName>
    <type>Lookup</type>
</CustomField>