force-app/main/default/objects/MasterAnken__c/fields/Mcarton_c__c.field-meta.xml
<CustomField>
    <fullName>Mcarton_c__c</fullName>
    <label>QUANTITY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>