force-app/main/default/objects/MasterAnken__c/fields/MCBM__c.field-meta.xml
<CustomField>
    <fullName>MCBM__c</fullName>
    <inlineHelpText>Measurement(1m*1m*1m) of Cargo</inlineHelpText>
    <label>MEASURMENT(CBM)</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>