force-app/main/default/objects/MasterAnken__c/fields/MCnee__c.field-meta.xml
<CustomField>
    <fullName>MCnee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>M-Consignee</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>MCNEE</relationshipName>
    <type>Lookup</type>
</CustomField>