force-app/main/default/objects/MasterAnken__c/fields/MConsigneeEnglishCompany_Name_Address__c.field-meta.xml
<CustomField>
    <fullName>MConsigneeEnglishCompany_Name_Address__c</fullName>
    <formula>MCnee__r.EnglishCompanyName__c 
&amp; BR() &amp; 
MCnee__r.EnglishAddress__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consignee English Company Name&amp;Address</label>
    <type>Text</type>
</CustomField>