force-app/main/default/objects/MasterAnken__c/fields/MConsolidationType__c.field-meta.xml
<CustomField>
    <fullName>MConsolidationType__c</fullName>
    <label>MConsolidationType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>自社混載(Consolidation Cargo)</fullName>
                <default>true</default>
                <label>自社混載(Consolidation Cargo)</label>
            </value>
            <value>
                <fullName>複数BL貨物(Multiple BL Cargo)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>