force-app/main/default/objects/MasterAnken__c/fields/MContainer2__c.field-meta.xml
<CustomField>
    <fullName>MContainer2__c</fullName>
    <label>CONTAINER TYPE-2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>20&apos;DC</fullName>
            </value>
            <value>
                <fullName>40&apos;DC</fullName>
            </value>
            <value>
                <fullName>40&apos;HC</fullName>
            </value>
            <value>
                <fullName>20&apos;REF</fullName>
            </value>
            <value>
                <fullName>40&apos;REF</fullName>
            </value>
            <value>
                <fullName>20&apos;FT</fullName>
            </value>
            <value>
                <fullName>40&apos;FT</fullName>
            </value>
            <value>
                <fullName>20&apos;OT</fullName>
            </value>
            <value>
                <fullName>40&apos;OT</fullName>
            </value>
            <value>
                <fullName>20&apos;PF</fullName>
            </value>
            <value>
                <fullName>40&apos;PF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>