force-app/main/default/objects/MasterAnken__c/fields/MContainer_No__c.field-meta.xml
<CustomField>
    <fullName>MContainer_No__c</fullName>
    <inlineHelpText>Container Number/Seal Number</inlineHelpText>
    <label>Container No &amp; Seal No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>