force-app/main/default/objects/MasterAnken__c/fields/MContainerNumber2__c.field-meta.xml
<CustomField>
    <fullName>MContainerNumber2__c</fullName>
    <label>CONTAINER QNTY-2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>