force-app/main/default/objects/MasterAnken__c/fields/MContainerNumber__c.field-meta.xml
<CustomField>
    <fullName>MContainerNumber__c</fullName>
    <label>CONTAINER QNTY-1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>