force-app/main/default/objects/MasterAnken__c/fields/MDescriptionOfGoods__c.field-meta.xml
<CustomField>
    <fullName>MDescriptionOfGoods__c</fullName>
    <label>DESCRIPTION OF GOODS</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>