force-app/main/default/objects/MasterAnken__c/fields/MDevan__c.field-meta.xml
<CustomField>
    <fullName>MDevan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>When consolidation, put the company name responsible for Vanning/Export - Devanning/Import</inlineHelpText>
    <label>VANNING/DEVAN OPERATION COMPANY</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>MDevan</relationshipName>
    <type>Lookup</type>
</CustomField>