force-app/main/default/objects/MasterAnken__c/fields/MDevanContact__c.field-meta.xml
<CustomField>
    <fullName>MDevanContact__c</fullName>
    <formula>&quot; TEL: &quot;&amp; MDevan__r.Phone 
&amp; BR() &amp;&quot; FAX: &quot;&amp; MDevan__r.Fax</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VANNING/DEVAN COMPANY DETAIL</label>
    <type>Text</type>
</CustomField>