force-app/main/default/objects/MasterAnken__c/fields/MDevanningDate__c.field-meta.xml
<CustomField>
    <fullName>MDevanningDate__c</fullName>
    <inlineHelpText>When consolidation, put the date of Vanning for export and date of Devanning for import</inlineHelpText>
    <label>VANNING/DEVAN DATE</label>
    <type>Date</type>
</CustomField>