force-app/main/default/objects/MasterAnken__c/fields/MDevanRep__c.field-meta.xml
<CustomField>
    <fullName>MDevanRep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PIC OF VANNING/DEVAN COMPANY</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.MDevan__c</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>MDevanRep</relationshipName>
    <type>Lookup</type>
</CustomField>