force-app/main/default/objects/MasterAnken__c/fields/MDevanWarehouse__c.field-meta.xml
<CustomField>
    <fullName>MDevanWarehouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VANNING/DEVAN WAREHOUSE</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.MDevan__c</field>
            <operation>equals</operation>
            <valueField>LoadLocation__c.WharehouseCompany__r.Id</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>LoadLocation__c</referenceTo>
    <relationshipLabel>CONSOLIDATION (VANNING/DEVAN WAREHOUSE)</relationshipLabel>
    <relationshipName>MDevanWarehouse</relationshipName>
    <type>Lookup</type>
</CustomField>