force-app/main/default/objects/MasterAnken__c/fields/META__c.field-meta.xml
<CustomField>
    <fullName>META__c</fullName>
    <label>ETA</label>
    <type>Date</type>
</CustomField>