force-app/main/default/objects/MasterAnken__c/fields/METD__c.field-meta.xml
<CustomField>
    <fullName>METD__c</fullName>
    <label>ETD</label>
    <type>Date</type>
</CustomField>