force-app/main/default/objects/MasterAnken__c/fields/MLoadLocation__c.field-meta.xml
<CustomField>
    <fullName>MLoadLocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CARGO LOADING WAREHOUSE</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.MBookingNv__c</field>
            <operation>equals</operation>
            <valueField>LoadLocation__c.WharehouseCompany__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>LoadLocation__c</referenceTo>
    <relationshipLabel>CONSOLIDATION (CARGO LOADING WAREHOUSE)</relationshipLabel>
    <relationshipName>M_BL</relationshipName>
    <type>Lookup</type>
</CustomField>