force-app/main/default/objects/MasterAnken__c/fields/MMaster_B_L_No__c.field-meta.xml
<CustomField>
    <fullName>MMaster_B_L_No__c</fullName>
    <label>M BL/M AWB</label>
    <length>30</length>
    <type>Text</type>
</CustomField>