force-app/main/default/objects/MasterAnken__c/fields/MNotifyPartyEnglishCompanyName__c.field-meta.xml
<CustomField>
    <fullName>MNotifyPartyEnglishCompanyName__c</fullName>
    <formula>MNotifyParty__r.EnglishCompanyName__c 
&amp; BR() &amp; BR() &amp; 
MNotifyParty__r.EnglishAddress__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Notify Party English Company Name&amp;Addres</label>
    <type>Text</type>
</CustomField>