force-app/main/default/objects/MasterAnken__c/fields/MPartner__c.field-meta.xml
<CustomField>
    <fullName>MPartner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>M-Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>MPartner</relationshipName>
    <type>Lookup</type>
</CustomField>