force-app/main/default/objects/MasterAnken__c/fields/MPartnerEnglishAddress__c.field-meta.xml
<CustomField>
    <fullName>MPartnerEnglishAddress__c</fullName>
    <formula>MPartner__r.EnglishAddress__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner English Address</label>
    <type>Text</type>
</CustomField>