force-app/main/default/objects/MasterAnken__c/fields/MPlace_Of_Receipt__c.field-meta.xml
<CustomField>
    <fullName>MPlace_Of_Receipt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Place Of Receipt</label>
    <referenceTo>Port__c</referenceTo>
    <relationshipName>M_B_L_SHIPMENTS_RECEIPT</relationshipName>
    <type>Lookup</type>
</CustomField>