force-app/main/default/objects/MasterAnken__c/fields/MPOD__c.field-meta.xml
<CustomField>
    <fullName>MPOD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Port Of Dispatch</label>
    <referenceTo>Port__c</referenceTo>
    <relationshipName>M_B_L_SHIPMENTS_POD</relationshipName>
    <type>Lookup</type>
</CustomField>