force-app/main/default/objects/MasterAnken__c/fields/MPOL__c.field-meta.xml
<CustomField>
    <fullName>MPOL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Port Of Loading</label>
    <referenceTo>Port__c</referenceTo>
    <relationshipName>M_B_L_SHIPMENTS_POL</relationshipName>
    <type>Lookup</type>
</CustomField>