force-app/main/default/objects/MasterAnken__c/fields/MPrintDate__c.field-meta.xml
<CustomField>
    <fullName>MPrintDate__c</fullName>
    <defaultValue>today()</defaultValue>
    <label>PRINT DATE</label>
    <type>Date</type>
</CustomField>