force-app/main/default/objects/MasterAnken__c/fields/MShipper__c.field-meta.xml
<CustomField>
    <fullName>MShipper__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>M-Shipper</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>MShipper</relationshipName>
    <type>Lookup</type>
</CustomField>