force-app/main/default/objects/MasterAnken__c/fields/MShipperEnglishCompanyName_Address__c.field-meta.xml
<CustomField>
    <fullName>MShipperEnglishCompanyName_Address__c</fullName>
    <formula>MShipper__r.EnglishCompanyName__c 
&amp; BR() &amp; 
MShipper__r.EnglishAddress__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipper English Company Name&amp;Address</label>
    <type>Text</type>
</CustomField>