force-app/main/default/objects/MasterAnken__c/fields/MTRANSIT_PORT__c.field-meta.xml
<CustomField>
    <fullName>MTRANSIT_PORT__c</fullName>
    <label>TRANSIT PORT</label>
    <length>15</length>
    <type>Text</type>
</CustomField>