force-app/main/default/objects/MasterAnken__c/fields/MTRANSIT_T_ETD__c.field-meta.xml
<CustomField>
    <fullName>MTRANSIT_T_ETD__c</fullName>
    <label>ETD AT TRANSIT PORT</label>
    <type>Date</type>
</CustomField>