force-app/main/default/objects/MasterAnken__c/fields/MVessel__c.field-meta.xml
<CustomField>
    <fullName>MVessel__c</fullName>
    <label>MVessel</label>
    <length>100</length>
    <type>Text</type>
</CustomField>