force-app/main/default/objects/MasterAnken__c/fields/MVoy_No__c.field-meta.xml
<CustomField>
    <fullName>MVoy_No__c</fullName>
    <label>Voyage</label>
    <length>20</length>
    <type>Text</type>
</CustomField>