force-app/main/default/objects/MasterAnken__c/fields/NO_HOUSE_B_L__c.field-meta.xml
<CustomField>
    <fullName>NO_HOUSE_B_L__c</fullName>
    <label>NUMBER OF HOUSE B/Ls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>