force-app/main/default/objects/MasterAnken__c/fields/NumberofContainer__c.field-meta.xml
<CustomField>
    <fullName>NumberofContainer__c</fullName>
    <label>Number of Container-old</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>