force-app/main/default/objects/MasterAnken__c/fields/rollupcargoquantity__c.field-meta.xml
<CustomField>
    <fullName>rollupcargoquantity__c</fullName>
    <label>Roll up cargo quantity</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>