force-app/main/default/objects/MasterAnken__c/fields/rollupcbm__c.field-meta.xml
<CustomField>
    <fullName>rollupcbm__c</fullName>
    <label>Roll up CBM</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>