force-app/main/default/objects/MasterAnken__c/fields/rollupgw__c.field-meta.xml
<CustomField>
    <fullName>rollupgw__c</fullName>
    <label>Roll up G.W</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>