force-app/main/default/objects/MasterAnken__c/fields/SECONDSWITCH_BL__c.field-meta.xml
<CustomField>
    <fullName>SECONDSWITCH_BL__c</fullName>
    <inlineHelpText>Input the B/L number after switch, if any.</inlineHelpText>
    <label>2ND MASTER B/L NUMBER</label>
    <length>30</length>
    <type>Text</type>
</CustomField>