force-app/main/default/objects/MasterAnken__c/fields/SIClosingDateTime__c.field-meta.xml
<CustomField>
    <fullName>SIClosingDateTime__c</fullName>
    <label>S/I Closing Date/Time</label>
    <type>DateTime</type>
</CustomField>