force-app/main/default/objects/MasterAnken__c/fields/TranportationServiceType__c.field-meta.xml
<CustomField>
    <fullName>TranportationServiceType__c</fullName>
    <label>TRANSPORTATION SERVICE TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CFS/CFS</fullName>
            </value>
            <value>
                <fullName>CY/CY</fullName>
            </value>
            <value>
                <fullName>CFS/CY</fullName>
            </value>
            <value>
                <fullName>CY/CFS</fullName>
            </value>
            <value>
                <fullName>BULK</fullName>
            </value>
            <value>
                <fullName>AIR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>