force-app/main/default/objects/MasterAnken__c/fields/Update_Information_to_HBL__c.field-meta.xml
<CustomField>
    <fullName>Update_Information_to_HBL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Information to HBL</label>
    <type>Checkbox</type>
</CustomField>